Fixed deprecated use of newInstance().
See: http://errorprone.info/bugpattern/ClassNewInstance

Signed-off-by: Pierre-Louis Palant <palant@byte-lab.com>